# cLOUDy-Backend-SENG2021

./: .dockerignore  PostgresDB.py  config.py  db_config.py  dockerfile  pyproject.toml  run.py  swagger.yaml  test_output.txt
.github/workflows/: test.yml
app/: __init__.py  extensions.py  proxy_route.py  routes.py  routes_v2.py
app/ai_model/: mode_schema.py  model.py  product_matcher.py  prompts.py
app/config/: run.py
app/services/: analytics_service.py  apiKey.py  api_key.py  app_auth_service.py  auth_services.py  buyer_service.py  cart_service.py  inventory_service.py  order_db.py  orderdb.py  (+8 more)
database/: PostgresDB.py  schema.sql
tests/: test_XML_generation.py  test_XML_to_db.py  test_XML_to_db_update_cancel.py  test_apiKey.py  test_apiKey_system_test.py  test_api_key.py  test_api_key_system_test.py  test_cancelOrder.py  test_cancel_order.py  test_cancel_order_system.py  test_createOrder.py  test_createOrder_system_test.py  test_create_order.py  test_deleteCanceledBuyer.py  test_delete_canceled_buyer.py  test_delete_canceled_buyer_system.py  test_getAllOrdersForABuyer.py  test_getAllOrdersForABuyer_system.py  test_getOrderById.py  test_getOrderXML.py  test_get_all_orders_for_buyer.py  test_get_order_XML.py  test_get_order_by_id.py  test_get_order_by_id_systems.py  test_helper.py  test_updateOrder.py  test_updateOrder_system.py  test_update_order.py  test_update_order_system.py  test_validateOrder.py  test_validateOrderXml.py  test_validateOrderXml_system_test.py  test_validate_api_key.py  test_xmlGeneration.py  test_xmlToDb.py  test_xmlToDbUpdateCancel.py
(+54 files in other folders)
