[project]
name = "cloudy-backend-seng2021"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.42.61",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.1.0",
    "flask-swagger-ui>=5.21.0",
    "lxml>=6.0.2",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "flask-limiter>=4.1.1",
    "waitress>=3.0.2",
    "flask-cors>=6.0.2",
    "requests>=2.33.1",
]
